# DocsLLM

./: .gitignore  docker-compose.yml  pyproject.toml
docslm/: config.yaml  manage.py  users.csv
docslm/core/: models.py  urls.py  views.py
docslm/core/static/css/: style.css
docslm/core/static/js/: app.js
docslm/core/templates/: index.html
docslm/core/utilities/: agents.py  auth.py  files.py  search.py
docslm/docslm/: settings.py  urls.py  wsgi.py
docslm/services/: agent.py  process.py  store.py
